NetBSD Problem Report #41677

From www@NetBSD.org  Tue Jul  7 07:56:12 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 3C95463B913
	for <gnats-bugs@gnats.netbsd.org>; Tue,  7 Jul 2009 07:56:12 +0000 (UTC)
Message-Id: <20090707075612.10E9F63B883@www.NetBSD.org>
Date: Tue,  7 Jul 2009 07:56:12 +0000 (UTC)
From: marc@msys.ch
Reply-To: marc@msys.ch
To: gnats-bugs@NetBSD.org
Subject: X in -current requires and xorg.conf file for the mouse to work properly
X-Send-Pr-Version: www-1.0

>Number:         41677
>Category:       xsrc
>Synopsis:       X in -current requires and xorg.conf file for the mouse to work properly
>Confidential:   no
>Severity:       critical
>Priority:       medium
>Responsible:    xsrc-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jul 07 08:00:01 +0000 2009
>Closed-Date:    Tue Jun 01 05:13:32 +0000 2010
>Last-Modified:  Tue Jun 01 05:13:32 +0000 2010
>Originator:     Marc Balmer
>Release:        -current
>Organization:
>Environment:
Several.
>Description:
When the X server is started and not configuration file is specified or present in /etc/X11, the mouse can only be moved horzontally.

running X -configure and the using the created config file usin X -config remedies the problem.

X should work without a config file, though.
>How-To-Repeat:
make sure there is no /etc/X11/xorg.conf file, then run startx and enjoy your mouse movements.
>Fix:

>Release-Note:

>Audit-Trail:
From: kolbycrouch@comcast.net
To: gnats-bugs@NetBSD.org
Cc: netbsd-bugs@netbsd.org
Subject: Re: xsrc/41677: X in -current requires and xorg.conf file for the
 mouse to work properly
Date: Tue, 7 Jul 2009 08:27:38 +0000 (UTC)

 ------=_Part_48082_488915813.1246955258166
 Content-Type: text/plain; charset=utf-8
 Content-Transfer-Encoding: 7bit

 What type of mouse would this be, possibly synaptics? I've had similar problems even in linux with hal not recognizing the mouse right. maybe you dont have the right drivers, do you have xf86-input-mouse, xf86-input-evdev, and possibly xf86-input-synaptics? 


 ----- ------------------------------------------------------------------------------------------------------------------------------------- 
 >Number: 41677 
 >Category: xsrc 
 >Synopsis: X in -current requires and xorg.conf file for the mouse to work properly 
 >Confidential: no 
 >Severity: critical 
 >Priority: medium 
 >Responsible: xsrc-manager 
 >State: open 
 >Class: sw-bug 
 >Submitter-Id: net 
 >Arrival-Date: Tue Jul 07 08:00:01 +0000 2009 
 >Originator: Marc Balmer 
 >Release: -current 
 >Organization: 
 >Environment: 
 Several. 
 >Description: 
 When the X server is started and not configuration file is specified or present in /etc/X11, the mouse can only be moved horzontally. 

 running X -configure and the using the created config file usin X -config remedies the problem. 

 X should work without a config file, though. 
 >How-To-Repeat: 
 make sure there is no /etc/X11/xorg.conf file, then run startx and enjoy your mouse movements. 
 >Fix: 


 ------=_Part_48082_488915813.1246955258166
 Content-Type: text/html; charset=utf-8
 Content-Transfer-Encoding: quoted-printable

 <html><head><style type=3D'text/css'>p { margin: 0; }</style></head><body><=
 div style=3D'font-family: Arial; font-size: 12pt; color: #000000'>What type=
  of mouse would this be, possibly synaptics? I've had similar problems even=
  in linux with hal not recognizing the mouse right. maybe you dont have the=
  right drivers, do you have xf86-input-mouse, xf86-input-evdev, and possibl=
 y xf86-input-synaptics?<br><br><br>----- ----------------------------------=
 ---------------------------------------------------------------------------=
 ------------------------<br>&gt;Number: &nbsp; &nbsp; &nbsp; &nbsp; 41677<b=
 r>&gt;Category: &nbsp; &nbsp; &nbsp; xsrc<br>&gt;Synopsis: &nbsp; &nbsp; &n=
 bsp; X in -current requires and xorg.conf file for the mouse to work proper=
 ly<br>&gt;Confidential: &nbsp; no<br>&gt;Severity: &nbsp; &nbsp; &nbsp; cri=
 tical<br>&gt;Priority: &nbsp; &nbsp; &nbsp; medium<br>&gt;Responsible: &nbs=
 p; &nbsp;xsrc-manager<br>&gt;State: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;open<=
 br>&gt;Class: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;sw-bug<br>&gt;Submitter-Id:=
  &nbsp; net<br>&gt;Arrival-Date: &nbsp; Tue Jul 07 08:00:01 +0000 2009<br>&=
 gt;Originator: &nbsp; &nbsp; Marc Balmer<br>&gt;Release: &nbsp; &nbsp; &nbs=
 p; &nbsp;-current<br>&gt;Organization:<br>&gt;Environment:<br>Several.<br>&=
 gt;Description:<br>When the X server is started and not configuration file =
 is specified or present in /etc/X11, the mouse can only be moved horzontall=
 y.<br><br>running X -configure and the using the created config file usin X=
  -config remedies the problem.<br><br>X should work without a config file, =
 though.<br>&gt;How-To-Repeat:<br>make sure there is no /etc/X11/xorg.conf f=
 ile, then run startx and enjoy your mouse movements.<br>&gt;Fix:<br><br></d=
 iv></body></html>
 ------=_Part_48082_488915813.1246955258166--

From: matthew green <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41677 CVS commit: xsrc/external/mit/xf86-input-mouse/dist/src
Date: Wed, 8 Jul 2009 00:30:52 +0000

 Module Name:	xsrc
 Committed By:	mrg
 Date:		Wed Jul  8 00:30:52 UTC 2009

 Modified Files:
 	xsrc/external/mit/xf86-input-mouse/dist/src: mouse.c

 Log Message:
 use strcasecmp() to check for netbsd "wsmouse".
 auto-generated configs end up with "WSmouse".

 fixes PR#41677.


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 xsrc/external/mit/xf86-input-mouse/dist/src/mouse.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Tue, 01 Jun 2010 05:13:32 +0000
State-Changed-Why:
i fixed this almost a year ago.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.