use strcasecmp() to check for netbsd "wsmouse". auto-generated configs end up with "WSmouse".

fixes PR#41677.