external/mit/xf86-input-mouse/dist/src/mouse.c
@@ -1757,7 +1757,7 @@ MouseProc(DeviceIntPtr device, int what)
 	    xf86Msg(X_WARNING, "%s: cannot open input device\n", pInfo->name);
 	else {
 #if defined(__NetBSD__) && defined(WSCONS_SUPPORT) && defined(WSMOUSEIO_SETVERSION)
-	    if (!strcmp(pMse->protocol, "wsmouse")) {
+	    if (!strcasecmp(pMse->protocol, "wsmouse")) {
 	        int version = WSMOUSE_EVENT_VERSION;
 	        if (ioctl(pInfo->fd, WSMOUSEIO_SETVERSION, &version) == -1)
 	            xf86Msg(X_WARNING, "%s: cannot set version\n", pInfo->name);
